Página de Eventos - formatação

--- a/eventos-pagina.html
+++ b/eventos-pagina.html
@@ -200,132 +200,26 @@
 	</div>
 
 	<main class="container-xxl">
+
 		<div class="row mt-3 mb-3">
 			<div class="eventos">
 				<h2 class="laranja"><img src="img/eventos.png">Eventos</h2>
 			</div>
 
-			<div class="col-12 col-md-6 mb-3 mt-3 evento">
+			<div class="col-12 border rounded bg-light p-4">
 
-				<div class="row bg-light border rounded shadow-sm g-0 p-3">
-					<div class="evento-detalhes">
-						<div class="d-flex justify-content-between flex-column">
-							<div class="header-evento">
-								<h3>Nome do Evento 1</h3>
-								<p class="data">12/12/2022</p>
-								<p class="local">Local do Evento</p>
-							</div>
-							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
-						</div>
-					</div>
-				</div>
+				<h3 class="titulo-fala-gestor laranja">Título do evento</h3>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec lorem a dui sollicitudin semper. Aenean sollicitudin volutpat odio, mollis consequat nisl fringilla quis. Phasellus turpis elit, pellentesque eu ligula sed, pretium blandit metus. Fusce ornare mollis lacinia. Praesent semper arcu vel dictum maximus. Pellentesque lacinia diam dui, eu ultrices urna vestibulum nec. Curabitur sit amet leo scelerisque, euismod massa ac, porta dui. Integer sit amet nisi convallis, lobortis elit a, dapibus augue. Aenean suscipit fringilla diam, sed consectetur ligula facilisis rutrum. Vestibulum et venenatis tellus. In fringilla velit a sapien dignissim, eget porta metus ultrices. Donec eu blandit velit.</p>
+
+				<p>Maecenas lobortis mattis orci, eget ultrices quam ornare eu. Nulla sit amet elit arcu. Phasellus mattis ante nibh, quis bibendum velit ultricies non. Sed nec lectus ex. Nulla varius, nisi quis tempus pellentesque, ex augue suscipit enim, vel tincidunt lacus ante ut elit. Curabitur pretium at risus quis rutrum. Integer vel ex nunc. Nulla facilisi. Donec ut rutrum ipsum.</p>
+
+				<p>Curabitur at pretium diam. Proin lectus odio, rutrum pulvinar gravida et, mattis eget nunc. Nulla molestie egestas mauris, in lacinia urna sollicitudin sed. Duis rhoncus mauris nulla, quis faucibus ligula interdum non. Suspendisse potenti. Nulla leo nunc, placerat sit amet risus id, consequat vulputate mi. Nullam aliquam maximus mauris, lacinia ultrices eros scelerisque vel. Ut lacinia ex odio. Aliquam tincidunt venenatis dui, non faucibus mi luctus aliquet. Proin luctus aliquam vestibulum. Phasellus eleifend dolor at turpis porttitor auctor. Quisque eget magna malesuada, placerat leo at, faucibus diam. Sed malesuada dolor et accumsan ultrices. Suspendisse eu felis in nunc accumsan scelerisque sed nec velit. Nullam aliquet fermentum erat.</p>
+
 			</div>
-
-			<div class="col-12 col-md-6 mb-3 mt-3 evento">
-
-				<div class="row bg-light border rounded shadow-sm g-0 p-3">
-					<div class="evento-detalhes">
-						<div class="d-flex justify-content-between flex-column">
-							<div class="header-evento">
-								<h3>Nome do Evento 1</h3>
-								<p class="data">12/12/2022</p>
-								<p class="local">Local do Evento</p>
-							</div>
-							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 mb-3 mt-3 evento">
-
-				<div class="row bg-light border rounded shadow-sm g-0 p-3">
-					<div class="evento-detalhes">
-						<div class="d-flex justify-content-between flex-column">
-							<div class="header-evento">
-								<h3>Nome do Evento 1</h3>
-								<p class="data">12/12/2022</p>
-								<p class="local">Local do Evento</p>
-							</div>
-							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 mb-3 mt-3 evento">
-
-				<div class="row bg-light border rounded shadow-sm g-0 p-3">
-					<div class="evento-detalhes">
-						<div class="d-flex justify-content-between flex-column">
-							<div class="header-evento">
-								<h3>Nome do Evento 1</h3>
-								<p class="data">12/12/2022</p>
-								<p class="local">Local do Evento</p>
-							</div>
-							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 mb-3 mt-3 evento">
-
-				<div class="row bg-light border rounded shadow-sm g-0 p-3">
-					<div class="evento-detalhes">
-						<div class="d-flex justify-content-between flex-column">
-							<div class="header-evento">
-								<h3>Nome do Evento 1</h3>
-								<p class="data">12/12/2022</p>
-								<p class="local">Local do Evento</p>
-							</div>
-							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-12 col-md-6 mb-3 mt-3 evento">
-
-				<div class="row bg-light border rounded shadow-sm g-0 p-3">
-					<div class="evento-detalhes">
-						<div class="d-flex justify-content-between flex-column">
-							<div class="header-evento">
-								<h3>Nome do Evento 1</h3>
-								<p class="data">12/12/2022</p>
-								<p class="local">Local do Evento</p>
-							</div>
-							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<nav aria-label="Paginação Eventos">
-			  <ul class="pagination justify-content-center">
-			    <li class="page-item">
-			      <a class="page-link" href="#" aria-label="Previous">
-			        <span aria-hidden="true">&laquo;</span>
-			      </a>
-			    </li>
-			    <li class="page-item"><a class="page-link" href="#">1</a></li>
-			    <li class="page-item"><a class="page-link" href="#">2</a></li>
-			    <li class="page-item"><a class="page-link" href="#">3</a></li>
-			    <li class="page-item">
-			      <a class="page-link" href="#" aria-label="Next">
-			        <span aria-hidden="true">&raquo;</span>
-			      </a>
-			    </li>
-			  </ul>
-			</nav>
 
 		</div>
+
 	</main>
 
 	<footer class="footer text-center d-flex align-items-center justify-content-center">
