--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 										<p class="local">Local do Evento</p>
 									</div>
 									<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-									<a href="#" class="ver-mais">Ver detalhes do evento</a>
+									<a href="eventos-pagina.html" class="ver-mais">Ver detalhes do evento</a>
 								</div>
 							</div>
 							<div class="carousel-item evento-detalhes">
@@ -494,7 +494,7 @@
 										<p class="local">Local do Evento</p>
 									</div>
 									<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-									<a href="#" class="ver-mais">Ver detalhes do evento</a>
+									<a href="eventos-pagina.html" class="ver-mais">Ver detalhes do evento</a>
 								</div>
 							</div>
 						</div>
