--- a/comunicados.html
+++ b/comunicados.html
@@ -78,7 +78,7 @@
 		<div class="container-xxl">
 			<nav class="navbar navbar-expand-lg navbar-light nav-principal">
 				<div class="container-fluid">
-					<button class="navbar-toggler d-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
+					<button class="navbar-toggler d-flex bt-mega" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
 				        <span class="navbar-toggler-icon"></span>
 				        <span class="navbar-toggler-name">Estrutura SMS</span>
 				    </button>
@@ -201,7 +201,7 @@
 
 	<main class="container-xxl">
 		
-		<div class="row mt-3 mb-3">
+		<div class="row my-3">
 			<h2 class="azul">Comunicados</h2>
 			<!-- Carousel - Inicio-->
 			<div class="col-12 col-md-9 destaque mb-3">
@@ -254,7 +254,7 @@
 			<!-- Comunicados - Fim -->
 		</div>
 
-		<div class="row mt-3 mb-3 veja-tambem">
+		<div class="row my-3 veja-tambem">
 
 			<div class="col-12 pb-3">
 				<div class="row g-0 bg-light border rounded shadow-sm p-3 h-100">
@@ -311,7 +311,7 @@
 	<script src="assets/dist/js/jquery.js" type="text/javascript"></script>
 	<script>
 	$(document).ready(function(){
-	    $('.navbar-toggler').on('click', function(e){
+	    $('.bt-mega').on('click', function(e){
 	        $('html').toggleClass('menu-active');
 	        e.preventDefault();
 	    });
