--- a/eventos.html
+++ b/eventos.html
@@ -78,7 +78,7 @@
 		<div class="container-xxl">
 			<nav class="navbar navbar-expand-lg navbar-light nav-principal">
 				<div class="container-fluid">
-					<button class="navbar-toggler d-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
+					<button class="navbar-toggler d-flex bt-mega" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
 				        <span class="navbar-toggler-icon"></span>
 				        <span class="navbar-toggler-name">Estrutura SMS</span>
 				    </button>
@@ -200,7 +200,7 @@
 	</div>
 
 	<main class="container-xxl">
-		<div class="row mt-3 mb-3">
+		<div class="row my-3">
 			<div class="eventos">
 				<h2 class="laranja"><img src="img/eventos.png">Eventos</h2>
 			</div>
@@ -216,7 +216,7 @@
 								<p class="local">Local do Evento</p>
 							</div>
 							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
+							<a href="eventos-pagina.html" class="ver-mais laranja">Ver detalhes do evento</a>
 						</div>
 					</div>
 				</div>
@@ -233,7 +233,7 @@
 								<p class="local">Local do Evento</p>
 							</div>
 							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
+							<a href="eventos-pagina.html" class="ver-mais laranja">Ver detalhes do evento</a>
 						</div>
 					</div>
 				</div>
@@ -250,7 +250,7 @@
 								<p class="local">Local do Evento</p>
 							</div>
 							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
+							<a href="eventos-pagina.html" class="ver-mais laranja">Ver detalhes do evento</a>
 						</div>
 					</div>
 				</div>
@@ -267,7 +267,7 @@
 								<p class="local">Local do Evento</p>
 							</div>
 							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
+							<a href="eventos-pagina.html" class="ver-mais laranja">Ver detalhes do evento</a>
 						</div>
 					</div>
 				</div>
@@ -284,7 +284,7 @@
 								<p class="local">Local do Evento</p>
 							</div>
 							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
+							<a href="eventos-pagina.html" class="ver-mais laranja">Ver detalhes do evento</a>
 						</div>
 					</div>
 				</div>
@@ -301,7 +301,7 @@
 								<p class="local">Local do Evento</p>
 							</div>
 							<p class="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-							<a href="#" class="ver-mais laranja">Ver detalhes do evento</a>
+							<a href="eventos-pagina.html" class="ver-mais laranja">Ver detalhes do evento</a>
 						</div>
 					</div>
 				</div>
@@ -336,7 +336,7 @@
 	<script src="assets/dist/js/jquery.js" type="text/javascript"></script>
 	<script>
 	$(document).ready(function(){
-	    $('.navbar-toggler').on('click', function(e){
+	    $('.bt-mega').on('click', function(e){
 	        $('html').toggleClass('menu-active');
 	        e.preventDefault();
 	    });
