--- a/fala-gestor-pagina.html
+++ b/fala-gestor-pagina.html
@@ -78,7 +78,7 @@
 		<div class="container-xxl">
 			<nav class="navbar navbar-expand-lg navbar-light nav-principal">
 				<div class="container-fluid">
-					<button class="navbar-toggler d-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
+					<button class="navbar-toggler d-flex bt-mega" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
 				        <span class="navbar-toggler-icon"></span>
 				        <span class="navbar-toggler-name">Estrutura SMS</span>
 				    </button>
@@ -201,12 +201,12 @@
 
 	<main class="container-xxl">
 
-		<div class="row mt-3 mb-3">
+		<div class="row my-3">
 			<div class="fala-gestor">
 				<h2 class="azul"><img src="img/fala-gestor.svg">Fala, gestor!</h2>
 			</div>
 
-			<div class="col-12 border rounded bg-light p-4">
+			<div class="col-12 border rounded bg-light p-4 mx-3">
 
 				<h3 class="titulo-fala-gestor azul">Título do artigo</h3>
 
@@ -244,7 +244,7 @@
 	<script src="assets/dist/js/jquery.js" type="text/javascript"></script>
 	<script>
 	$(document).ready(function(){
-	    $('.navbar-toggler').on('click', function(e){
+	    $('.bt-mega').on('click', function(e){
 	        $('html').toggleClass('menu-active');
 	        e.preventDefault();
 	    });
