--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<div class="container-xxl">
 			<nav class="navbar navbar-expand-lg navbar-light nav-principal">
 				<div class="container-fluid">
-					<button class="navbar-toggler d-flex" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
+					<button class="navbar-toggler d-flex bt-mega" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsPrincipal" aria-controls="navbarsPrincipal" aria-expanded="false" aria-label="Mega Menu">
 				        <span class="navbar-toggler-icon"></span>
 				        <span class="navbar-toggler-name">Estrutura SMS</span>
 				    </button>
@@ -200,7 +200,7 @@
 	</div>
 
 	<main class="container-xxl">
-		<div class="row mt-3 mb-3">
+		<div class="row my-3">
 			<!-- Carousel - Inicio-->
 			<div class="col-12 col-md-9 destaque mb-3">
 				<div id="carouselDestaque" class="carousel slide rounded shadow-sm" data-bs-ride="carousel">
@@ -253,7 +253,7 @@
 		</div>
 
 		<!-- Boletins - Início -->
-		<div class="row mt-3 mb-3 boletins">
+		<div class="row my-3 boletins">
 
 			<h2>Boletins</h2>
 
@@ -323,7 +323,7 @@
 		<!-- Boletins - Fim -->
 
 		<!-- Youtube - Início -->
-		<div class="row mt-3 mb-3 g-0 youtube">
+		<div class="row my-3 g-0 youtube">
 
 			<h2><img src="img/youtube.svg">Nossos programas</h2>
 
@@ -381,7 +381,7 @@
 		<!-- Youtube - Fim -->
 
 		<!-- Especial Saúde - Início -->
-		<div class="row mt-3 mb-3 p-3 g-0 bg-light border rounded shadow-sm especial-saude">
+		<div class="row my-3 p-3 g-0 bg-light border rounded shadow-sm especial-saude">
 			<h2>+ Saúde para você</h2>
 
 			<div class="col-6 col-md-3 p-3 text-center">
@@ -522,7 +522,7 @@
 	<script src="assets/dist/js/jquery.js" type="text/javascript"></script>
 	<script>
 	$(document).ready(function(){
-	    $('.navbar-toggler').on('click', function(e){
+	    $('.bt-mega').on('click', function(e){
 	        $('html').toggleClass('menu-active');
 	        e.preventDefault();
 	    });
