Correção dos botões mobile

--- a/fala-gestor-pagina.html
+++ b/fala-gestor-pagina.html
@@ -201,12 +201,12 @@
 
 	<main class="container-xxl">
 
-		<div class="row my-3">
+		<div class="row my-3 gx-0">
 			<div class="fala-gestor">
 				<h2 class="azul"><img src="img/fala-gestor.svg">Fala, gestor!</h2>
 			</div>
 
-			<div class="col-12 border rounded bg-light p-4 mx-3">
+			<div class="col-12 border rounded bg-light p-4">
 
 				<h3 class="titulo-fala-gestor azul">Título do artigo</h3>
 
