--- a/mais-saude-para-voce.html
+++ b/mais-saude-para-voce.html
@@ -238,7 +238,7 @@
 			</div>
 		</div>
 
-		<div class="row my-3 p-4 bg-light border rounded mais-saude">
+		<div class="row mx-1 mb-3 p-4 bg-light border rounded mais-saude">
 			<ul>
 				<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
 				<li><a href="#">In cursus ex interdum facilisis lobortis.</a></li>
