--- a/eventos-pagina.html
+++ b/eventos-pagina.html
@@ -201,7 +201,7 @@
 
 	<main class="container-xxl">
 
-		<div class="row my-3">
+		<div class="row my-3 gx-0">
 			<div class="eventos">
 				<h2 class="laranja"><img src="img/eventos.png">Eventos</h2>
 			</div>
