--- a/mais-saude-para-voce.html
+++ b/mais-saude-para-voce.html
@@ -238,7 +238,7 @@
 			</div>
 		</div>
 
-		<div class="row mx-1 mb-3 p-4 bg-light border rounded mais-saude">
+		<div class="row mx-1 mb-3 p-4 bg-light border rounded mais-saude especial-saude">
 			<ul>
 				<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
 				<li><a href="#">In cursus ex interdum facilisis lobortis.</a></li>
@@ -249,6 +249,58 @@
 				<li><a href="#">Vivamus sed erat feugiat, tincidunt nisi eget, faucibus felis.</a></li>
 				<li><a href="#">Cras ut ligula et mi gravida hendrerit.</a></li>
 			</ul>
+
+			<hr>
+
+			<div class="col-6 col-md-3 p-3 text-center">
+				<a href="#" class="link-especial-saude">
+					<img src="img/sms-pergunta.svg">
+					<h3 class="text-center">SMS Pergunta</h3>
+				</a>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<a href="#" class="link-especial-saude">
+					<img src="img/educacao-permanente.svg">
+					<h3 class="text-center">Educação Permanente</h3>
+				</a>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<a href="#" class="link-especial-saude">
+					<img src="img/boas-praticas.svg">
+					<h3 class="text-center">Boas Práticas</h3>
+				</a>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<a href="#" class="link-especial-saude">
+					<img src="img/boato-ou-fato.svg">
+					<h3 class="text-center">Boato ou Fato</h3>
+				</a>
+			</div>
+
+			<div class="col-6 col-md-3 p-3 text-center">
+				<a href="#" class="link-especial-saude">
+					<img src="img/sms-na-midia.svg">
+					<h3 class="text-center">SMS na Mídia</h3>
+				</a>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<a href="#" class="link-especial-saude">
+					<img src="img/conta-pra-gente.svg">
+					<h3 class="text-center">Conta para a gente</h3>
+				</a>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<a href="#" class="link-especial-saude">
+					<img src="img/cuide-se-tambem.svg">
+					<h3 class="text-center">Cuide-se também</h3>
+				</a>
+			</div>
+			<div class="col-6 col-md-3 p-3 text-center">
+				<a href="#" class="link-especial-saude">
+					<img src="img/dose-cultural.svg" class="mx-auto">
+					<h3 class="text-center">Dose Cultural</h3>
+				</a>
+			</div>
 		</div>
 
 	</main>
