--- a/boletins.html
+++ b/boletins.html
@@ -208,10 +208,11 @@
 
 			<div class="col-12 pb-3">
 				<div class="row g-0 bg-light border rounded shadow-sm p-3 h-100">
-					<div class="col-12 pb-3">
-						<img src="img/saude-mais-perto.png" class="logo-boletim">
-					</div>
+					
 					<div class="col-12 col-md-4">
+						<div class="col-12 pb-3">
+							<img src="img/saude-mais-perto.png" class="logo-boletim">
+						</div>
 						<div class="row mb-3">
 							<div class="col-6 d-flex align-items-center">
 								<img src="img/boletim-noticias.jpg" class="border">
@@ -229,6 +230,9 @@
 					</div>
 					<div class="col-12 col-md-4">
 						<div class="row mb-3">
+							<div class="col-12 pb-3">
+								<img src="img/saude-mais-perto.png" class="logo-boletim">
+							</div>
 							<div class="col-6 d-flex align-items-center">
 								<img src="img/boletim-gente.jpg" class="border">
 							</div>
@@ -248,6 +252,9 @@
 
 					<div class="col-12 col-md-4">
 						<div class="row mb-3">
+							<div class="col-12 pb-3">
+								<img src="img/conecta.png" class="logo-boletim">
+							</div>
 							<div class="col-6 d-flex align-items-center">
 								<img src="img/boletim-conecta.jpg" class="border">
 							</div>
